fixed margin-top button small screens

--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ main {
 		width: 33%;
 		margin-left: 33%;
 		margin-right: 33%;
+		margin-top: 40px;
 		background-color: white;
 		border: solid 2px #00BCD4;
 		padding: 15px;
